@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2026-02-11T12:36:39Z",
+  "timestamp" : "2026-02-12T12:33:50Z",
   "count_outdated" : 6298,
   "uniques_outdated" : 1346,
-  "count" : 6372,
-  "uniques" : 1361,
+  "count" : 6375,
+  "uniques" : 1364,
   "views" : [
-    {
-      "timestamp": "2026-01-28T00:00:00Z",
-      "count": 0,
-      "count_minmax": [ 0, 0 ],
-      "count_decinc": [ 0, 0 ],
-      "uniques": 0,
-      "uniques_minmax": [ 0, 0 ],
-      "uniques_decinc": [ 0, 0 ]
-    },
     {
       "timestamp": "2026-01-29T00:00:00Z",
       "count": 1,
@@ -130,6 +121,15 @@
       "uniques": 0,
       "uniques_minmax": [ 0, 0 ],
       "uniques_decinc": [ 0, 0 ]
+    },
+    {
+      "timestamp": "2026-02-11T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
