@@ -1,12 +1,7 @@
 {
-  "count": 74,
-  "uniques": 13,
+  "count": 77,
+  "uniques": 16,
   "views": [
-    {
-      "timestamp": "2026-01-28T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
     {
       "timestamp": "2026-01-29T00:00:00Z",
       "count": 1,
@@ -71,6 +66,11 @@
       "timestamp": "2026-02-10T00:00:00Z",
       "count": 0,
       "uniques": 0
+    },
+    {
+      "timestamp": "2026-02-11T00:00:00Z",
+      "count": 3,
+      "uniques": 3
     }
   ]
 }
